changed a few function to complete the MOP test. Starting the Lewis and Mertens (2022) test
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@224 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/empir.bib
+++ b/pkg/momentfit/vignettes/empir.bib
@@ -1,3 +1,11 @@
+@article{lewis-mertens22,
+  AUTHOR={Lewis, D.J. and Mertens, K.},
+  TITLE={A robust test for weak instruments with Multiplle Endogenous Regressors},
+  JOURNAL={FRB of Dallas Working Paper No. 2208},
+  YEAR={2022},
+  url={https://ssrn.com/abstract=4144103}
+ } 
+
 @article{montiel-olea-pflueger13,
   AUTHOR={Montiel Olea, J. and Pflueger, C.},
   TITLE={A robust test for weak instruments},
