--- a/pkg/momentfit/vignettes/weak.Rmd
+++ b/pkg/momentfit/vignettes/weak.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Instrumental Variables Tools for the Case of Weak or Many Instruments"
+title: "Instrumental Variables Tools for the Case of Weak and/or Many Instruments"
 author: "Pierre Chausse^[University of Waterloo, pchausse@uwaterloo.ca]"
 date: ""
 bibliography: empir.bib 
