fixing problems with confidence intervals
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@235 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/gelS4.Rnw
+++ b/pkg/momentfit/vignettes/gelS4.Rnw
@@ -968,8 +968,8 @@ res <- confint(simData, c("x2","y"), npoints=20)
 res
 @ 
 
-The following is not run because it creates some misterious error when
-the package is checked. Beside that, it works perfectly. Try it.
+We can plot the confidence region using the \textit{plot} method
+associated with the object created by \textit{confint}:
 
 \begin{center}
 \begin{minipage}{.7\textwidth}
