edited NEWS with the future plan for version 1.0
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@238 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/NEWS
+++ b/pkg/momentfit/NEWS
@@ -1,4 +1,17 @@
-Changes in version 0.0-2
+Changes in version 1.0
 
-o Added restricted EEL (REEL), which imposes the implied probabilities to be non-negative.
-o Algorithms like WU for EL and EEL are now written in Fortran
+o Added Bartlett correction for EL-confidence interval of the mean.
+
+o New tools to deal with Weak instruments have been added. See the vignette weak.pdf.
+
+o Nonlinear GMM models have shown to be hard to estimate with the default optim. Since the gradian is automatically provided within the solveGmm method (with analytical derivatives when possible), BFGS is now the default method. It seems to perform better in general.
+
+o Related to the previous point, there is now an option to select a different optimization algorithm, even from different packages. It is explained in the vignette. For that matter, the argument algo is no longer defined as vector of character with the option "optim" and "nlminb". Instead, it is a new object. See the vignette.
+
+Changes in version 0.5
+
+o The Makevars was modified. The previous version was hard to install on most MAC because of an unnecessary flag. It is no longer the case. 
+
+o An option for not computing the moment strength has been added to the summary method.
+
+
