add the options for other solvers and return more convergence message
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@239 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/empir.bib
+++ b/pkg/momentfit/vignettes/empir.bib
@@ -1004,3 +1004,11 @@ year = {1994},
     pages = {1--24},
     url = {http://www.jstatsoft.org/v55/i08/},
   }
+
+
+  @Article{nloptr,
+    title = {The NLopt nonlinear-optimization package},
+    author = {Steven G. Johnson},
+    year = {2022},
+    url = {https://nlopt.readthedocs.io/en/latest/}
+  }
